--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,8 +3,8 @@ spring.application.name=Stream_Backend
 spring.datasource.url=jdbc:mysql://sql109.infinityfree.com:3306/if0_38340615_music_streaming?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=if0_38340615
 spring.datasource.password=dF0plXur4E6
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update                   
 spring.jpa.show-sql=false
 
