--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=Stream_Backend
 
-spring.datasource.url=jdbc:mysql://sql109.infinityfree.com:3306/if0_38340615_music_streaming?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=if0_38340615
-spring.datasource.password=dF0plXur4E6
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.username=root
+spring.datasource.password=JLbnqrpEhODjXDOzYlRxGfwbEQTMWBjU
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update                   
@@ -17,7 +17,7 @@ spotify.auth.url=${SPOTIFY_AUTHURL}
 spotify.token.url=${SPOTIFY_TOKENURL}
 
 # SoundCloud API credentials
-#SC=SoundCloud
+#SC = SoundCloud
 soundcloud.client.id=${SC_CLIENTID}
 soundcloud.client.secret=${SC_CLIENTSECRET}
 soundcloud.auth.url =${SC_AUTHURL}
