--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=XKJZGaXNfKPVnNGOMGGiVwcZgOpIyQYm
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update                   
-spring.jpa.show-sql=false
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
 
 # Spotify API credentials
 spotify.client.id=${SPOTIFY_CLIENTID}
